# sonzai-hermes

./: .gitignore  PLAN.md  README.md  SPEC.md  justfile  pyproject.toml  sonzai_hermes_cli.py
.github/workflows/: ci.yml  release.yml
plugins/context_engine/sonzai/: README.md  __init__.py  engine.py  plugin.yaml
plugins/context_engine/sonzai/_common/: __init__.py  client.py  identity.py
plugins/memory/sonzai/: README.md  __init__.py  cli.py  plugin.yaml  provider.py
plugins/memory/sonzai/_common/: __init__.py  byok.py  config.py
scripts/: README.md  verify_abc_parity.py  verify_hermes_discovery.py  verify_lifecycle.py
sonzai_common/: __init__.py  byok.py  client.py  config.py  format.py  identity.py  onboarding.py
tests/: conftest.py  test_smoke.py
tests/test_common/: test_byok.py  test_client.py  test_config.py  test_format.py  test_identity.py  test_onboarding.py
tests/test_context_engine/: test_engine.py
tests/test_integration/: test_e2e_both.py  test_e2e_memory.py
tests/test_memory/: test_cli.py  test_provider.py
