[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sonzai-hermes"
version = "0.1.0"
description = "Hermes Agent plugins backed by Sonzai — Memory Provider + Context Engine"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Sonzai Labs" }]
keywords = ["hermes", "sonzai", "memory", "context-engine", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "sonzai>=1.5.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://sonz.ai"
Source = "https://github.com/sonz-ai/sonzai-hermes"
Hermes = "https://hermes-agent.nousresearch.com"

[project.scripts]
# After `pip install sonzai-hermes`, this command stages our plugin
# directories into the locations Hermes' loader actually scans.
sonzai-hermes = "sonzai_hermes_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sonzai_common"]

# The two plugin packages live under the same leaf name (``sonzai``) but
# at different nested paths. ``packages =`` would collapse both into a
# single ``sonzai/`` and collide; ``force-include`` keeps the full path.
# Also force-include the stand-alone CLI module that ``sonzai-hermes``
# resolves to.
[tool.hatch.build.targets.wheel.force-include]
"plugins" = "plugins"
"sonzai_hermes_cli.py" = "sonzai_hermes_cli.py"

[tool.hatch.build.targets.sdist]
include = [
    "sonzai_common",
    "plugins",
    "sonzai_hermes_cli.py",
    "tests",
    "README.md",
    "SPEC.md",
    "PLAN.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Skip integration tests by default — they hit a live Sonzai tenant.
# Run them explicitly with `pytest -m integration`.
addopts = "-m 'not integration'"
markers = [
    "integration: end-to-end tests that hit a live Sonzai API (requires SONZAI_API_KEY)",
]
